fix: prevent truncated text from showing
- moves padding to grid the cell wrapper instead of grid cell content to ensure the padding does not affect the line-clamp

--- a/packages/eui/src/components/datagrid/_data_grid_data_row.scss
+++ b/packages/eui/src/components/datagrid/_data_grid_data_row.scss
@@ -4,12 +4,12 @@
 
 @include euiDataGridRowCell {
   position: relative; // Needed for .euiDataGridRowCell__actions
+  padding: $euiDataGridCellPaddingM;
   border-right: $euiDataGridVerticalBorder;
   border-bottom: $euiBorderThin;
 
   .euiDataGridRowCell__content {
     @include euiFontSizeS;
-    padding: $euiDataGridCellPaddingM;
     height: 100%;
     overflow: hidden;
 
@@ -257,17 +257,13 @@
 // Padding alternates
 @include euiDataGridStyles(paddingSmall) {
   @include euiDataGridRowCell {
-    .euiDataGridRowCell__content {
-      padding: $euiDataGridCellPaddingS;
-    }
+    padding: $euiDataGridCellPaddingS;
   }
 }
 
 @include euiDataGridStyles(paddingLarge) {
   @include euiDataGridRowCell {
-    .euiDataGridRowCell__content {
-      padding: $euiDataGridCellPaddingL;
-    }
+    padding: $euiDataGridCellPaddingL;
   }
 }
 
